--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,69 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary-color: black;
+  --secondary-color: white;
+  --success-color: #4caf50;
+  --warning-color: #ff9800;
+  --info-color: #2196f3;
+  --hot-pink: hotpink;
+  --danger-color: #f44336;
+  --grey-ligheness: #f5f5f5;
+  --grey-lighen: #eeeeee;
+  --grey-light: #d3d3d3;
+  --grey: #9e9e9e;
+  --grey-dark: #757575;
+  --grey-darken: #4f4f4f;
+  --grey-darkness: #2f2f2f;
+  --grid-size: 8px;
+  --container: 1140px;
+  --transition-time: 0.2s;
+  --bounce: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  color-scheme: only light;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  background-color: #fff !important;
+
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  color: var(--primary-color) !important;
+  background-color: inherit !important;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Montserrat Variable', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  body {
+    background-color: #121212;
   }
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
 }
