--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -93,10 +93,18 @@
     border: none;
 }
 
+.ghost.isBordered {
+    border: 1px solid var(--primary-color);
+}
+
 .ghost-inverted {
     background-color: transparent;
     color: var(--secondary-color);
     border: none;
+}
+
+.ghost-inverted.isBordered {
+    border: 1px solid var(--secondary-color);
 }
 
 .danger {
