--- a/src/components/CreateRoomForm/CreateRoomForm.module.css
+++ b/src/components/CreateRoomForm/CreateRoomForm.module.css
@@ -6,10 +6,13 @@
     background-color: var(--primary-color);
     padding: calc(var(--grid-size) * 3);
     border: 2px solid var(--grey);
+    box-shadow: var(--shadow);
+    flex-wrap: wrap;
 }
 
 .field {
-    width: 100%;
+    flex-grow: 10;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     gap: var(--grid-size);
@@ -40,5 +43,11 @@
 .input:focus, .input:focus-visible {
     border-color: var(--secondary-color);
     outline: none;
+}
+
+.button {
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
