--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,16 +1,24 @@
 .footer {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     gap: calc(var(--grid-size) * 3);
-    padding: calc(var(--grid-size) * 6) calc(var(--grid-size) * 3);
-    background-color: var(--primary-color);
+    padding: calc(var(--grid-size) * 6) calc(var(--grid-size) * 2);
+    width: 100%;
+    margin: 0 auto;
+    max-width: var(--container);
+    flex-wrap: wrap;
+    background: transparent;
 }
 
-.button {
-    align-self: flex-end;
+.form {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .copy {
+    flex-grow: 1;
     text-align: center;
-    color: var(--grey-light);
+    color: var(--grey-darken);
 }
