--- a/src/components/MemberList/MemberList.module.css
+++ b/src/components/MemberList/MemberList.module.css
@@ -102,6 +102,7 @@
     overflow: hidden;
     transition: transform 0.2s var(--bounce), box-shadow 0.2s ease;
     transform: translateY(100%);
+    background-color: var(--secondary-color);
 }
 
 .status.isVisible {
