--- a/src/components/RoomList/RoomList.module.css
+++ b/src/components/RoomList/RoomList.module.css
@@ -6,6 +6,7 @@
 }
 
 .list {
+    background-color: var(--secondary-color);
     flex-grow: 1;
     padding-left: 0;
     list-style: none;
@@ -13,6 +14,7 @@
     flex-direction: column;
     border-radius: calc(var(--grid-size) * 2);
     overflow: hidden;
+    box-shadow: var(--shadow);
 }
 
 .item {
@@ -30,6 +32,7 @@
     border-radius: calc(var(--grid-size) * 2);
     border: 2px solid var(--primary-color);
     position: relative;
+    overflow: hidden;
 }
 
 .empty {
@@ -42,4 +45,5 @@
     justify-content: center;
     align-items: center;
     color: var(--grey-darken);
+    background-color: var(--secondary-color);
 }
