--- a/src/components/RoomPage/RoomPage.module.css
+++ b/src/components/RoomPage/RoomPage.module.css
@@ -12,6 +12,11 @@
     padding: calc(var(--grid-size) * 26) calc(var(--grid-size) * 3) calc(var(--grid-size) * 3);
 }
 
+.timeGrid {
+    margin-bottom: calc(var(--grid-size) * 6);
+}
+
+
 @media (min-width: 768px) {
     .page {
         flex-direction: row;
@@ -19,4 +24,8 @@
     .isHost .memberList {
         min-width: 400px;
     }
+    .timeGrid {
+        margin-bottom: 0;
+    }
 }
+
