--- a/src/app/(auth-pages)/sign-in/page.module.css
+++ b/src/app/(auth-pages)/sign-in/page.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
     padding: calc(var(--grid-size) * 2);
     width: 100%;
     margin: 0 auto;
