--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@ body {
 }
 
 .layout {
-  height: 100%;
+  min-height: 100vh;
   background-image: radial-gradient(#3443ab 0.5px, #ffffff 0.5px);
   background-size: 10px 10px;
 }
