--- a/src/components/RoomPage/RoomPage.module.css
+++ b/src/components/RoomPage/RoomPage.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
     flex-direction: column;
     gap: calc(var(--grid-size) * 4);
+    min-height: 100vh;
 }
 
 .isHost {
