--- a/src/components/RoomPage/RoomPage.module.css
+++ b/src/components/RoomPage/RoomPage.module.css
@@ -5,8 +5,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: flex-start;
     gap: calc(var(--grid-size) * 4);
-    min-height: 100vh;
 }
 
 .isHost {
@@ -15,6 +15,10 @@
 
 .timeGrid {
     margin-bottom: calc(var(--grid-size) * 6);
+}
+
+.memberList {
+    align-self: stretch;
 }
 
 
