--- a/src/app/(auth-pages)/sign-in/page.module.css
+++ b/src/app/(auth-pages)/sign-in/page.module.css
@@ -11,6 +11,7 @@
 }
 
 .title {
+    text-align: center;
     margin-bottom: var(--grid-size);
 }
 
@@ -18,4 +19,5 @@
     margin-bottom: calc(var(--grid-size) * 6);
     font-size: 1.1rem;
     font-weight: 500;
+    text-align: center;
 }
