--- a/src/app/(auth-pages)/sign-in/page.module.css
+++ b/src/app/(auth-pages)/sign-in/page.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    min-height: 100dvh;
     padding: calc(var(--grid-size) * 2);
     width: 100%;
     margin: 0 auto;
