--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,6 @@
 .page {
     min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     gap: calc(var(--grid-size) * 3);
