--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -120,6 +120,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: center;
     flex: 1 0 calc((100% - var(--time-width) - var(--grid-size) * 4 - 2px) / 2);
     transition: width var(--transition-time) var(--bounce), flex var(--transition-time) var(--bounce), opacity var(--transition-time) ease-in-out;
 }
@@ -131,6 +132,7 @@
 }
 
 .title {
+
     transform-origin: left;
 }
 
@@ -148,8 +150,7 @@
 }
 
 .story {
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
 .divider {
