--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,50 +1,53 @@
 :root {
-  --primary-color: black;
-  --secondary-color: white;
-  --success-color: #4caf50;
-  --warning-color: #ff9800;
-  --info-color: #2196f3;
-  --hot-pink: hotpink;
-  --danger-color: #f44336;
-  --grey-ligheness: #f5f5f5;
-  --grey-lighen: #eeeeee;
-  --grey-light: #d3d3d3;
-  --grey: #9e9e9e;
-  --grey-dark: #757575;
-  --grey-darken: #4f4f4f;
-  --grey-darkness: #2f2f2f;
-  --grid-size: 8px;
-  --container: 1140px;
-  --transition-time: 0.2s;
-  --bounce: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  --shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-  color-scheme: only light;
+    --primary-color: black;
+    --secondary-color: white;
+    --success-color: #4caf50;
+    --warning-color: #ff9800;
+    --warning-color-opacity: #fff5e9;
+    --info-color: #2196f3;
+    --info-color-opacity: #e5f2ff;
+    --hot-pink: hotpink;
+    --danger-color: #f44336;
+    --danger-color-opacity: #ffeae7;
+    --grey-ligheness: #f5f5f5;
+    --grey-lighen: #eeeeee;
+    --grey-light: #d3d3d3;
+    --grey: #9e9e9e;
+    --grey-dark: #757575;
+    --grey-darken: #4f4f4f;
+    --grey-darkness: #2f2f2f;
+    --grid-size: 8px;
+    --container: 1140px;
+    --transition-time: 0.2s;
+    --bounce: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    --shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+    color-scheme: light;
 }
 
 *, *::before, *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 * {
-  margin: 0;
+    margin: 0;
 }
 
 html {
-  background-color: #ebebf8 !important;
+    background-color: #ebebf8 !important;
 
 }
 
 html, body {
-  height: 100%;
+    height: 100%;
 }
 
 
 body {
-  color: var(--primary-color) !important;
-  background-color: inherit !important;
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-  font-family: 'Montserrat Variable', sans-serif;
+    color: var(--primary-color) !important;
+    background-color: inherit !important;
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Montserrat Variable', sans-serif;
 
 }
 
@@ -78,26 +81,20 @@ body {
     z-index: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #121212;
-  }
-}
-
 img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
 
 input, button, textarea, select {
-  font: inherit;
+    font: inherit;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 #root, #__next {
-  height: 100%;
-  isolation: isolate;
+    height: 100%;
+    isolation: isolate;
 }
