--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,11 +4,17 @@
     position: fixed;
     z-index: 2;
     height: 0;
-    top: calc(var(--grid-size) * 10);
+    top: calc(var(--grid-size) * 15);
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 calc(var(--grid-size) * 2);
+}
+
+@media (min-width: 790px) {
+    .wrapper {
+        top: calc(var(--grid-size) * 10);
+    }
 }
 
 .container {
