--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -42,6 +42,7 @@
     font-size: 1rem;
     font-weight: 500;
     will-change: height, width;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .container.isInProgress {
