--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -107,6 +107,12 @@
     border: 1px solid var(--secondary-color);
 }
 
+.warning {
+    background-color: var(--warning-color);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+
 .danger {
     background-color: var(--danger-color);
     color: var(--secondary-color);
