Add z-index for remove button in member list for Host.

--- a/src/components/MemberList/MemberList.module.css
+++ b/src/components/MemberList/MemberList.module.css
@@ -42,7 +42,7 @@
     border-color: var(--warning-color);
 }
 
-.list.isHost:hover .container {
+.list.isHost:hover:not(:has(.removeButton:hover)) .container {
     border-color: var(--warning-color);
 }
 
