feat: add Recently Visited Rooms feature with tracking and UI integration

--- a/src/components/RoomItem/RoomItem.module.css
+++ b/src/components/RoomItem/RoomItem.module.css
@@ -22,10 +22,24 @@
     }
 }
 
+.titleSection {
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--grid-size) / 2);
+    flex-grow: 1;
+}
+
 .title {
     font-size: 1.2rem;
     font-weight: 500;
     color: var(--primary-color);
+}
+
+.visitDate {
+    font-size: 0.75rem;
+    font-weight: 400;
+    color: var(--grey-darken);
+    line-height: 1;
 }
 
 .row {
