feat: implement ConfirmModal component with animations and focus management, and integrate into Member component

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     left: 0;
-    right: 0;
+    right: var(--scrollbar-compensation, 0);
     position: fixed;
     z-index: 3;
     height: 0;
