--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -15,12 +15,13 @@
     display: flex;
     align-items: center;
     gap: calc(var(--grid-size) * 2);
+    justify-content: flex-end;
+    flex-grow: 1;
 }
 
 .form {
     display: flex;
-    justify-content: center;
-    margin: 0 auto;
+    justify-content: flex-end;
     gap: calc(var(--grid-size) * 2);
 }
 
