--- a/src/components/RoomPage/RoomPage.module.css
+++ b/src/components/RoomPage/RoomPage.module.css
@@ -48,6 +48,9 @@
         flex-direction: row;
         gap: calc(var(--grid-size) * 4);
     }
+    .isHost {
+        padding: calc(var(--grid-size) * 30) calc(var(--grid-size) * 3) calc(var(--grid-size) * 3);
+    }
     .isHost .memberList {
         min-width: 400px;
     }
@@ -55,4 +58,16 @@
         margin-bottom: 0;
     }
 }
+
+@media (min-width: 790px) {
+    .isHost {
+        padding: calc(var(--grid-size) * 26) calc(var(--grid-size) * 3) calc(var(--grid-size) * 3);
+    }
+}
+
+/* @media (min-width: 1024px) {
+    .isHost .memberList {
+        min-width: 400px;
+    }
+} */
 
